# robot

./: .gitigonre  README.md
code/arduino/Fritz/: Fritz.ino  SoftwareServos.h
code/client/: Animate.cpp  Animate.cpp_  Animate.h  CMakeLists.txt  Robot.cpp  Robot.h  Serial.cpp  Serial.h  StateSeries.h  Worker.cpp  Worker.h  doa.cpp  doa.hpp  fft.cpp  fft.hpp  inputprocess.cpp  inputprocess.hpp  main.cpp  main2.cpp  micarray.cpp  micarray.hpp  vad.cpp  vad.hpp
code/client/ffmpeg/: ffmpeg.sh
code/client/webrtc/common_audio/signal_processing/: spl_init.c
code/client/xcorr/: xcorr.c  xcorr.h
code/common/: audiotype.hpp  debug_throw.cpp  debug_throw.hpp  message.cpp  message.hpp  messageprocess.cpp  messageprocess.hpp  safequeue.hpp  socketpipe.cpp  socketpipe.hpp
code/common/CMake/: FindFFTW.cmake  FindRT.cmake
code/fritz_serial_control/: .gitignore  CMakeLists.txt  FindPkgMacros.cmake  ReadMe.md
code/server/: CMakeLists.txt  chatrobot.hpp  config.h.in  datatypes.hpp  dialog.cpp  dialog.hpp  estimate_head_direction.cpp  forkandpipe.cpp  forkandpipe.hpp  generate.cpp  generate.hpp  headdirection.cpp  headdirection.hpp  init_threads.cpp  init_xf.cpp  main.cpp  messageprocess.cpp  messageprocess.hpp  recognize.cpp  recognize.hpp
code/server/gazr/: .gitignore  CMakeLists.txt  README.md  head_pose_estimation.cpp  package.xml
code/server/gazr/dlib/: CMakeLists.txt  README.md
code/server/gazr/launch/: 3d_facial_features.launch  gazr.launch  gazr_gscam.launch
code/server/gazr/src/: facialfeaturescloud.cpp  facialfeaturescloud.hpp  head_pose_estimation.cpp  head_pose_estimation.hpp  main.cpp  ros_head_pose_estimator.cpp  ros_head_pose_estimator.hpp
code/server/gazr/tools/: estimate_head_direction.cpp  estimate_head_pose_from_image_or_file.cpp  image_file_names_example.txt  show_head_pose.cpp
code/server/xf/samples/iat_sample/: iat_sample.c
code/server/xf/samples/tts_sample/: tts_sample.c
doc/: TODO.txt  接线ubuntu.xlsx  接线图.ai  逻辑图.ai
